# mkdocs-ask-ai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/rules/: mcp-server-constraints.md  python-compat.md
.claude/skills/: changelog-entry.md  release.md
.github/workflows/: ci.yml  release.yml
docs/specs/: 2026-03-14-mcp-server-design.md  2026-03-14-mcp-server-plan.md
src/mkdocs_ask_ai/: __init__.py  cli.py  config.py  mcp_index.py  mcp_server.py  plugin.py
test-site/: mkdocs.yml
tests/: test_mcp_index.py  test_mcp_server.py
